Se cambio Titulo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>		
-		<title>MiPortalWeb.com</title>
+		<title>MiPortalGIT.com</title>
 		<meta charset="utf-8">
 		<meta name="description" content="MiPortalWeb.com">
 		<meta name="keywords" content="MiPortalWeb, web, miweb, la web, mi portal web">
@@ -19,7 +19,7 @@
 		</div>
 		<!-- Cabecera de la página web -->
 		<div id="header">
-			<h1>Mi Portal WEB</h1>
+			<h1>Mi Portal GIT</h1>
 		</div>
 		<!-- Fin de la cabecera de la página web -->
 		<!-- Contenedor para la parte central -->
