Cambio de texto

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<!-- fin cuerpo -->
 			<!-- Menu Lateral -->
 			<div id="LateralContainer">
-				<p class="destacado" align="center">Categorias</p>
+				<h2><p class="destacado" align="center">CATEGORIAS</p></h2>
 				<ul id="navlist2">
 					<li id="active"><a href="#">General</a></li>
 					<br>
