--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<!-- fin contenedor para la parte central -->
 		<!-- Pie de página o footer -->
 		<div id="footer">
-			Copyright 2016-2040 MiPortalWeb.com
+			Copyright 2016-2040 MiPortalGIT.com
 			<img src="Images/logo.png" id="logo">
 		</div>
 		<!-- Fin del pie de página o footer -->
